# auto-caption

./: .gitattributes  .gitignore  AutoCaption.bat  AutoCaption.command  CONTRIBUTING.md  LICENSE  README.md  drop_video_here.bat  pyproject.toml
.github/workflows/: ci.yml
autocaption/: __init__.py  cli.py  gui.py  media.py  transcribe.py
tests/: test_core.py
