[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autocaption"
version = "0.1.0"
description = "Free local karaoke-style auto captions for shorts/reels (Whisper + ASS + FFmpeg)"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.scripts]
autocaption = "autocaption.cli:main"

[tool.setuptools]
packages = ["autocaption"]
